RESOLVED FIXED13101
REGRESSION (NativeTextField): Specifying word-wrap:break-word makes text field wrap
https://bugs.webkit.org/show_bug.cgi?id=13101
Summary REGRESSION (NativeTextField): Specifying word-wrap:break-word makes text fiel...
mitz
Reported 2007-03-17 09:11:25 PDT
See URL. I am going to post a patch.
Attachments
Force the inner block to 'word-wrap:normal' (19.34 KB, patch)
2007-03-17 09:14 PDT, mitz
adele: review+
mitz
Comment 1 2007-03-17 09:14:22 PDT
Created attachment 13682 [details] Force the inner block to 'word-wrap:normal'
Adele Peterson
Comment 2 2007-03-17 09:54:29 PDT
Comment on attachment 13682 [details] Force the inner block to 'word-wrap:normal' mitz, you rock!
Mark Rowe (bdash)
Comment 3 2007-03-18 16:57:48 PDT
Landed in r20298.
Note You need to log in before you can comment on or make changes to this bug.