2007-03-18  Mitz Pettel  <mitz@webkit.org>

Reviewed by Adele.

        - fix http://bugs.webkit.org/show_bug.cgi?id=13101
          REGRESSION (NativeTextField): Specifying word-wrap:break-word makes text field wrap

        Test: fast/forms/input-text-word-wrap.html

        * rendering/RenderTextControl.cpp:
        (WebCore::RenderTextControl::createInnerTextStyle): Force the inner block to
        'word-wrap:normal'.

2007-03-18  Mitz Pettel  <mitz@webkit.org>

        Reviewed by Adele.

        - test for http://bugs.webkit.org/show_bug.cgi?id=13101
          REGRESSION (NativeTextField): Specifying word-wrap:break-word makes text field wrap

        * fast/forms/input-text-word-wrap-expected.checksum: Added.
        * fast/forms/input-text-word-wrap-expected.png: Added.
        * fast/forms/input-text-word-wrap-expected.txt: Added.
        * fast/forms/input-text-word-wrap.html: Added.


git-svn-id: svn://svn.chromium.org/blink/trunk@20298 bbb929c8-8fbe-4397-9dbb-9b2b20218538