third_party/WebKit/WebCore/rendering/RenderTextControl.cpp
@@ -154,6 +154,7 @@ RenderStyle* RenderTextControl::createInnerTextStyle(RenderStyle* startStyle)
         }
     } else {
         textBlockStyle->setWhiteSpace(PRE);
+        textBlockStyle->setWordWrap(WBNORMAL);
         textBlockStyle->setOverflowX(OHIDDEN);
         textBlockStyle->setOverflowY(OHIDDEN);
         
